Chart to task 9

--- a/sprawozdanie2/part1-supervised.tex
+++ b/sprawozdanie2/part1-supervised.tex
@@ -324,6 +324,13 @@ Sukcesywnie zwiększaj rozmiar zbioru weryfikującego, zmniejszając rozmiar ucz
 \item \textbf{
 Sporządź wykres zależności trafności klasyfikowania, błędu klasyfikowania i procentu przykładów niezaklasyfikowanych w funkcji proporcji rozmiaru zbioru weryfikującego do liczby przykładów, jakie mamy do dyspozycji podczas uczenia (czyli rozmiar zbioru uczącego + rozmiar zbioru weryfikującego). Czy można znaleźć jakąś wielkość optymalną?
 }
+
+\begin{figure}[h]
+\centering
+\includegraphics[width=0.8\textwidth]{dane/part1/zad9/verify}
+\caption{Częstość klsyfikacji poprawnych, błędnych i niezaklasyfikowanych w funkcji proporcji rozmiaru zbioru weryfikującego do rozmiaru zbioru użytego podczas uczenia .\label{fig:verify}}
+\end{figure}
+
 \end{enumerate}
 
 \subsection{Porównanie ‘vanilla’ backpropagation z bardziej wyrafinowanymi algorytmami uczenia nadzorowanego sieci warstwowych}
