Charts to task 10 added

--- a/sprawozdanie2/bibliografia.bib
+++ b/sprawozdanie2/bibliografia.bib
@@ -1,7 +1,8 @@
-@book{UMiSN,
-author = {Krzysztof Krawiec, Jerzy Stefanowski},
+@Book{umisn,
+ALTauthor = {Krzysztof Krawiec, Jerzy Stefanowski},
+ALTeditor = {•},
 title = {Uczenie maszynowe i sieci neuronowe},
 publisher = {Wydawnictwo Politechniki Poznańskiej},
 year = {2004},
-edition = {2},
+OPTedition = {2},
 }
