--- a/sprawozdanie2/sprawozdanie.tex
+++ b/sprawozdanie2/sprawozdanie.tex
@@ -4,7 +4,8 @@
 \usepackage[OT4]{fontenc} 
 \usepackage{graphicx,color} %include pdf's (and png's for raster graphics... avoid raster graphics!) 
 \usepackage{url} 
-\usepackage[pdftex,hyperfootnotes=false,pdfborder={0 0 0}]{hyperref} %za wszystkimi pakietami; pdfborder nie wszedzie tak samo zaimplementowane bo specyfikacja nieprecyzyjna; pod miktex'em po prostu nie widac wtedy ramek
+\usepackage{cite}
+\usepackage[pdftex,hyperfootnotes=true,pdfborder={0 0 0}]{hyperref} %za wszystkimi pakietami; pdfborder nie wszedzie tak samo zaimplementowane bo specyfikacja nieprecyzyjna; pod miktex'em po prostu nie widac wtedy ramek
 
 
 \input{_ustawienia.tex}
@@ -21,8 +22,8 @@
 
 %%%%%%%%%%%%%%%% literatura %%%%%%%%%%%%%%%%
 
-%\bibliography{sprawozd}
-%\bibliographystyle{plain}
+\bibliographystyle{plalpha}
+\bibliography{sprawozdanie}
 
 
 \end{document}
