Fixed bugs affecting compilation

--- a/sprawozdanie2/part1-supervised.tex
+++ b/sprawozdanie2/part1-supervised.tex
@@ -338,7 +338,7 @@ Sporządź wykres zależności trafności klasyfikowania, błędu klasyfikowania
 \subsection{Porównanie ‘vanilla’ backpropagation z bardziej wyrafinowanymi algorytmami uczenia nadzorowanego sieci warstwowych}
 \textbf{Dla zbioru PIMA lub BUPA przeprowadź eksperyment uczenia i testowania, używając poza standardowym (vanilla) algorytmem backpropagation innych algorytmów uczenia (np. QuickPropagation, Delta-bar-Delta). Dla zapewnienia porównywalności wyników, w poszczególnych eksperymentach zachowaj tą samą konfigurację sieci i warunki stopu. W miarę możliwości uśrednij wyniki z kilku przebiegów dla każdego algorytmu. Czy któryś z algorytmów jest wyraźnie lepszy? Porównaj liczbę epok uczenia.
 \\
-Uwaga. Algorytmy QuickProp i DeltaBarDelta mogą okazać się trochę niestabilne (w ogólności łatwiej niż backprop wpadają w minima lokalne). W takim przypadku trzeba się trochę pobawić parametrami.
+Uwaga. Algorytmy QuickProp i DeltaBarDelta mogą okazać się trochę niestabilne (w ogólności łatwiej niż backprop wpadają w minima lokalne). W takim przypadku trzeba się trochę pobawić parametrami.}
 
 \begin{figure}[h]
 \centering
@@ -354,7 +354,7 @@ Uwaga. Algorytmy QuickProp i DeltaBarDelta mogą okazać się trochę niestabiln
 
 \begin{figure}[h]
 \centering
-\includegraphics[width=0.8\textwidth]{dane/part1/zad10/errors-pima}
+\includegraphics[width=0.8\textwidth]{dane/part1/zad10/epochs-pima-errors}
 \caption{Średni błąd średniokwadratowy po osiągnięciu warunku stopu dla różnych algorytmów uczenia. (zbiór \emph {PIMA}).\label{fig:errors-pima}}
 \end{figure}
 
