--- a/sprawozdanie2/sprawozdanie.bib
+++ b/sprawozdanie2/sprawozdanie.bib
@@ -5,3 +5,10 @@ publisher = {Wydawnictwo Politechniki Poznańskiej},
 year = {2004},
 edition = {2},
 }
+
+@ONLINE{duch10,
+  author = {Włodzisław Duch},
+  title = {Datasets used for classification: comparison of results},
+  url = {http://www.is.umk.pl/projects/datasets.html#Diabetes},
+  year = "2010",
+}
