Corrected some charts in part 1

--- a/sprawozdanie2/part1-supervised.tex
+++ b/sprawozdanie2/part1-supervised.tex
@@ -247,8 +247,8 @@ w funkcji progu Accept, dla następujących wartości Accept i Reject:
 
 \begin{figure}[h]
 \centering
-\includegraphics[width=0.8\textwidth]{dane/part1/zad7/train}
-\caption{Zależność procentowej ilości przypadków zaklasyfikowanych poprawnie, błędni i niezaklasyfikowanych od progu akceptacji, dla zbioru uczącego.\label{fig:confusionTrain}}
+\includegraphics[width=0.8\textwidth]{dane/part1/zad7/test}
+\caption{Zależność procentowej ilości przypadków zaklasyfikowanych poprawnie, błędni i niezaklasyfikowanych od progu akceptacji, dla zbioru testującego.\label{fig:confusionTrain}}
 \end{figure}
 
 \item \textbf{
