--- a/sprawozdanie2/sprawozdanie.tex
+++ b/sprawozdanie2/sprawozdanie.tex
@@ -6,6 +6,7 @@
 \usepackage{url} 
 %\usepackage{cite}
 \usepackage{biblatex}
+\usepackage{listings}
 \usepackage[pdftex,hyperfootnotes=true,pdfborder={0 0 0}]{hyperref} %za wszystkimi pakietami; pdfborder nie wszedzie tak samo zaimplementowane bo specyfikacja nieprecyzyjna; pod miktex'em po prostu nie widac wtedy ramek
 \bibliography{sprawozdanie}
 
