--- a/sprawozdanie1/part2-rules.tex
+++ b/sprawozdanie1/part2-rules.tex
@@ -50,7 +50,11 @@
 	\subsection{Generowanie reguł z~użyciem algorytmu \emph{LEM}}
 
 \begin{itemize}
-\item Wygeneruj reguły dla zbioru \emph{HPAP.ISF}.
+\item \textbf{Wygeneruj reguły dla zbioru \emph{HPAP.ISF}.}
+
+	\input{figures/part2/task2/hpap-rules}
+	\\Wygenerowane reguły zostały przedstawione na rysunku \ref{p2t2-hpap-rules}.
+
 \item Przyjrzyj się regułom możliwym; opisz je i~,,wydedukuj'', skąd się wzięły.
 \end{itemize}
 
