included generated rules

--- a/sprawozdanie1/figures/part2/task2/monk-rules.tex
+++ b/sprawozdanie1/figures/part2/task2/monk-rules.tex
@@ -24,5 +24,5 @@ rule 22. (a1 = 3) & (a2 = 3) => (d = 1)
 rule 23. (a2 = 1) & (a1 = 1) => (d = 1)
 \end{verbatim}
 \caption{Reguły decyzyjne dla zbioru \emph{monk1} uzyskane algorytmem \emph{LEM}}
-\label{p2t2-vote-rules}
+\label{p2t2-monk-rules}
 \end{figure}
