--- a/sprawozdanie1/figures/part2/task2/vote-rules.tex
+++ b/sprawozdanie1/figures/part2/task2/vote-rules.tex
@@ -1,7 +1,8 @@
 \begin{figure}
 \begin{verbatim}
 rule 1. (A9 = n) & (A3 = n) & (A7 = n) & (A12 = y) & (A11 = n) => (A17 = republican)
-rule 2. (A13 = y) & (A3 = n) & (A1 = n) & (A12 = y) & (A11 = y) & (A2 = y) => (A17 = republican)
+rule 2. (A13 = y) & (A3 = n) & (A1 = n) & (A12 = y) & (A11 = y) &
+        (A2 = y) => (A17 = republican)
 rule 3. (A4 = y) & (A2 = n) & (A10 = y) => (A17 = republican)
 rule 4. (A9 = n) & (A13 = y) & (A3 = n) & (A2 = y) & (A11 = n) => (A17 = republican)
 rule 5. (A3 = n) & (A8 = ?) => (A17 = republican)
