--- a/sprawozdanie1/part2-rules.tex
+++ b/sprawozdanie1/part2-rules.tex
@@ -55,7 +55,7 @@
 	\input{figures/part2/task2/hpap-rules}
 	\\Wygenerowane reguły zostały przedstawione na rysunku \ref{p2t2-hpap-rules}.
 
-\item Przyjrzyj się regułom możliwym; opisz je i~,,wydedukuj'', skąd się wzięły.
+\item \textbf{Przyjrzyj się regułom możliwym; opisz je i~,,wydedukuj'', skąd się wzięły.}
 \end{itemize}
 
 	\\Reguły 1--4 to reguły pewne, natomiast reguła 5~jest regułą przybliżoną. Reguła 1~pokrywa 2~z~3 obiektów klasy $l$, stąd jej pokrycie wynosi 66\%, reguła 2~pokrywa dwa obiekty z~klasy $m$ (pokrycie 50\%), reguła 3~pokrywa jeden obiekt z klasy $m$ (pokrycie 25\%), natomiast reguła 4~pokrywa oba obiekty z~klasy $v1$. Pozostały dwa obiekty nie pokryte przez żadną regułę pewną -- wynika to z faktu, że mimo iż posiadają identyczne wartości atrybutów, należą do dwóch różnych klas. Stąd reguła~5, przybliżona, która przypisuje obiekty jednocześnie do dwóch klas. Gdyby chcieć zamienić ją na reguły możliwe, należy usunąć jedną z~klas umieszczonych w~alternatywie.
@@ -63,7 +63,14 @@
 \subsection{Porównanie reguł generowanych za~pomocą algorytmu \emph{LEM} i~\emph{C4.5}}
 
 \begin{itemize}
-\item Wygeneruj reguły przy użyciu obu podejść dla zbiorów: \emph{HPAP}, \emph{VOTE} i~\emph{MONK}.
+\item \textbf{Wygeneruj reguły przy użyciu obu podejść dla zbiorów: \emph{HPAP}, \emph{VOTE} i~\emph{MONK}.}
+
+	\input{figures/part2/task2/hpap-rules-c45}
+	\input{figures/part2/task2/vote-rules}
+	\input{figures/part2/task2/vote-rules-c45}
+	\input{figures/part2/task2/monk-rules}
+	\input{figures/part2/task2/monk-rules-c45}
+
 \item Przyjrzyj się niezależnie regułom pewnym i~możliwym (\emph{LEM}).
 \end{itemize}
 
